# assembler

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.cargo/: config.toml
.github/workflows/: assembler.yml
assembler/: .gitignore  Cargo.toml  README.md
assembler/docs/: analyze.md  id_arg.md  no_os_arg.md
assembler/docs/example/: example_output.txt
assembler/docs/tests/: add.asm  bad_operand.asm
assembler/src/: analysis.rs  analyze.rs  assemble.rs  assembler.rs  complete.rs  cst.rs  error.rs  expanded.rs  ir1_simple_lines.rs  ir2_lines.rs  ir3_unvalidated_objects.rs  layer.rs  lex.rs  lexer.rs  lib.rs  link.rs  linker.rs  new.rs  parse.rs  parser.rs  util.rs
assembler/src/analysis/: extract_errors.rs  memory_placement.rs  mod.rs  symbol_table.rs  validate.rs
assembler/src/ir/: ir1_parse_lines.rs  ir2_check_line_syntax.rs  ir2_parse_line_syntax.rs  ir3_group_lines_and_objects.rs  ir3_parse_objects.rs  ir4_parse_ambiguous_tokens.rs  ir4_validate_ambiguous_tokens.rs  ir5_expand_pseudo_ops.rs  mod.rs
assembler/src/new/: assembler.rs  lexer.rs  linker.rs  mod.rs  parser.rs
assembler/tests/: integ.rs
assembler/tests/inputs/: arithmetic_small.asm  load_store_medium.asm  pseudo_ops.asm  very_many_errors.asm
language_client/: package.json  pnpm-lock.yaml  tsconfig.json
language_client/src/: extension.ts
language_server/: Cargo.toml  README.md
language_server/src/: lib.rs  semantic_token.rs
src/: ast.rs  cst.rs  error.rs  expanded.rs  ir1_simple_lines.rs  ir2_lines.rs  ir3_unvalidated_objects.rs  lc3.lalrpop  lexer.rs  main.rs  parser.rs
