[package]
name = "assembler"
version = "0.1.0"
authors = ["gipsond <david.gipson@utexas.edu>"]
edition = "2018"

[build-dependencies]
lalrpop = "0.17.2"

[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.1"
lc3-isa = { path = "../../isa", version = "0.1.0", default-features = false, features = ["no_std"] }

