[workspace]
members = [
    "assembler",
    "language_server",
]

[patch.crates-io]
lc3-isa = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-shims = { git = "https://github.com/ut-utp/core", branch = "master" }
lc3-os = { git = "https://github.com/ut-utp/core", branch = "master" }
