[package]
name = "lc3-assembler"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "A little assembler for a little computer."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/assembler"

readme = "README.md"

keywords = ["lc-3", "cli", "assembler", "tooling", "utp"]
categories = ["assembly", "tooling", "command-line-utilities"]

license = "MPL-2.0"

default-run = "assemble_lc3"

[[bin]]
name = "assemble_lc3"
path = "bin/as.rs"

[badges]
github-actions = { repository = "ut-utp/assembler", workflow = "assembler" }
codecov = { repository = "ut-utp/assembler", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/assembler" }
is-it-maintained-open-issues = { repository = "ut-utp/assembler" }
maintenance = { status = "actively-developed" }


[dependencies]
regex = "0.2.1"
itertools = "0.8.2"
num-traits = "0.2.11"
annotate-snippets = { version = "0.8.0", features = ["color"] }
clap = "2.33.0"

lc3-isa = { version = "0.1.0", default-features = false }
lc3-shims = { version = "0.1.0", default-features = false }
lc3-os = { version = "0.1.0", default-features = false }

[dev-dependencies]
pretty_assertions = "0.6.1"
