[package]
name = "lc3-assembler"
version = "0.1.0"
authors = ["UT UTP <ut.utp.group@gmail.com>"]
edition = "2018"

workspace = ".."

description = "A little assembler for a little computer."
homepage = "https://ut-utp.github.io"
repository = "http://github.com/ut-utp/assembler"

readme = "README.md"

keywords = ["lc-3", "cli", "assembler", "tooling", "utp"]
categories = ["assembly", "tooling", "command-line-utilities"]

license = "MPL-2.0"

default-run = "assemble_lc3"

[[bin]]
name = "assemble_lc3"
path = "bin/as.rs"

[badges]
github-actions = { repository = "ut-utp/assembler", workflow = "assembler" }
codecov = { repository = "ut-utp/assembler", branch = "master", service = "github" }

is-it-maintained-issue-resolution = { repository = "ut-utp/assembler" }
is-it-maintained-open-issues = { repository = "ut-utp/assembler" }
maintenance = { status = "actively-developed" }


[dependencies]
itertools = "0.8.2"
clap = { version = "3.1.18", features = ["derive"] }
chumsky = "0.8.0"
ariadne = "0.1.5"
quote = "1.0.18"

lc3-isa = { git = "https://github.com/ut-utp/core", branch = "master", version = "0.1.0", default-features = false }
lc3-shims = { git = "https://github.com/ut-utp/core", branch = "master", version = "0.1.0", default-features = false }
lc3-os = { git = "https://github.com/ut-utp/core", branch = "master", version = "0.1.0", default-features = false }
# TODO: ^ eventually don't pull these from git

[dev-dependencies]
assert_matches = "1.5.0"
